--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="Bob.js"></script>
       <script src="sketch.js"></script>
       <script src="roof.js"></script>
-      <script src="chain.js"></script>
+      <script src="rope.js"></script>
     </head>
     <body>
     </body>
